@@ -2,26 +2,32 @@
 
 #############
 # Build App
-FROM openjdk:9-slim as build
+FROM openjdk:14.0-jdk as build
 
 ENV APP_HOME=/root/
 
 WORKDIR $APP_HOME
-ADD gradle $APP_HOME/gradle
-ADD build.gradle $APP_HOME/build.gradle
-ADD gradlew $APP_HOME/gradlew
-ADD src $APP_HOME/src
+ADD gradle gradle
+ADD build.gradle build.gradle
+ADD gradlew gradlew
+ADD src src
 
 RUN --mount=type=cache,target=/root/.m2 \
     --mount=type=cache,target=/root/.gradle \
-    ./gradlew build
+    ./gradlew build --no-daemon
 
 # #############
 # Final image
-FROM openjdk:9-slim
+FROM openjdk:14.0-jdk
 WORKDIR /root/
 COPY --from=build /root/build/libs/*.jar app.jar
 
+# RUN cp /root/build/libs/*.jar app.jar
+
 EXPOSE 8080
 
-CMD ["java","-jar","app.jar"]
+CMD ["java", \
+     "-XX:+UnlockExperimentalVMOptions", \
+     "--enable-preview", \
+     "-jar", \
+     "app.jar"]
